feat: integrate Stripe payment checkout flow
- Add pricing.js for Stripe Checkout integration
- Add subscribe-success.html and subscribe-cancel.html pages
- Update pricing buttons with data-plan attributes
- Add Stripe /config endpoint for publishable key
- Fix webhook handlers to use findUserByStripeCustomerId
- Add subscription management card to dashboard settings
- Include subscription info in auth status endpoint

--- a/frontend/dashboard/settings.html
+++ b/frontend/dashboard/settings.html
@@ -6,6 +6,159 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings - AmazonReach</title>
     <link rel="stylesheet" href="dashboard.css">
+    <style>
+        /* Subscription Card Styles */
+        .subscription-card {
+            background: linear-gradient(135deg, rgba(99, 102, 241, 0.1), rgba(139, 92, 246, 0.05));
+            border: 1px solid rgba(99, 102, 241, 0.2);
+            border-radius: 16px;
+            padding: 1.5rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .subscription-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 1.25rem;
+            flex-wrap: wrap;
+            gap: 0.75rem;
+        }
+
+        .subscription-header h3 {
+            font-size: 1.1rem;
+            color: #fff;
+            margin: 0;
+        }
+
+        .plan-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.375rem;
+            padding: 0.375rem 0.75rem;
+            border-radius: 100px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .plan-badge.free-trial {
+            background: rgba(251, 191, 36, 0.15);
+            color: #fbbf24;
+            border: 1px solid rgba(251, 191, 36, 0.3);
+        }
+
+        .plan-badge.basic {
+            background: rgba(96, 165, 250, 0.15);
+            color: #60a5fa;
+            border: 1px solid rgba(96, 165, 250, 0.3);
+        }
+
+        .plan-badge.pro {
+            background: rgba(99, 102, 241, 0.15);
+            color: #818cf8;
+            border: 1px solid rgba(99, 102, 241, 0.3);
+        }
+
+        .plan-badge.enterprise {
+            background: rgba(168, 85, 247, 0.15);
+            color: #c084fc;
+            border: 1px solid rgba(168, 85, 247, 0.3);
+        }
+
+        .status-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            display: inline-block;
+        }
+
+        .status-dot.active {
+            background: #10b981;
+            box-shadow: 0 0 8px rgba(16, 185, 129, 0.5);
+        }
+
+        .status-dot.inactive {
+            background: #ef4444;
+        }
+
+        .subscription-details {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 1rem;
+            margin-bottom: 1.25rem;
+        }
+
+        .detail-item {
+            background: rgba(255, 255, 255, 0.03);
+            border-radius: 10px;
+            padding: 0.75rem;
+            border: 1px solid rgba(255, 255, 255, 0.06);
+        }
+
+        .detail-item label {
+            font-size: 0.75rem;
+            color: rgba(255, 255, 255, 0.5);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            margin-bottom: 0.25rem;
+            display: block;
+        }
+
+        .detail-item span {
+            font-size: 0.95rem;
+            color: #fff;
+            font-weight: 500;
+        }
+
+        .subscription-actions {
+            display: flex;
+            gap: 0.75rem;
+            flex-wrap: wrap;
+        }
+
+        .btn-manage {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.625rem 1.25rem;
+            border-radius: 10px;
+            font-weight: 600;
+            font-size: 0.85rem;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            border: none;
+            text-decoration: none;
+        }
+
+        .btn-manage.primary {
+            background: linear-gradient(135deg, #6366f1, #8b5cf6);
+            color: #fff;
+        }
+
+        .btn-manage.primary:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 6px 20px rgba(99, 102, 241, 0.4);
+        }
+
+        .btn-manage.secondary {
+            background: rgba(255, 255, 255, 0.06);
+            color: rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(255, 255, 255, 0.12);
+        }
+
+        .btn-manage.secondary:hover {
+            background: rgba(255, 255, 255, 0.1);
+            color: #fff;
+        }
+
+        .btn-manage:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+            transform: none !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -35,6 +188,42 @@
         <header class="header">
             <h1 class="page-title">Account Settings</h1>
         </header>
+
+        <!-- Subscription Management Card -->
+        <div class="subscription-card" id="subscriptionCard">
+            <div class="subscription-header">
+                <h3>💳 Subscription</h3>
+                <span class="plan-badge free-trial" id="planBadge">
+                    <span class="status-dot active"></span>
+                    Free Trial
+                </span>
+            </div>
+
+            <div class="subscription-details">
+                <div class="detail-item">
+                    <label>Current Plan</label>
+                    <span id="currentPlan">Free Trial</span>
+                </div>
+                <div class="detail-item">
+                    <label>Status</label>
+                    <span id="subStatus">Active</span>
+                </div>
+                <div class="detail-item">
+                    <label>Member Since</label>
+                    <span id="memberSince">—</span>
+                </div>
+            </div>
+
+            <div class="subscription-actions">
+                <button class="btn-manage primary" id="upgradeBtn" onclick="window.location.href='/#pricing'">
+                    ⬆️ Upgrade Plan
+                </button>
+                <button class="btn-manage secondary" id="manageBillingBtn" style="display: none;">
+                    💳 Manage Billing
+                </button>
+            </div>
+        </div>
+
         <div class="card">
             <div class="card-title">Integration Center</div>
             <div class="integration-section">
@@ -80,6 +269,86 @@
             const BACKEND_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
                 ? 'http://localhost:3000'
                 : 'https://amazonreach-production.up.railway.app';
+
+            // Load subscription info
+            async function loadSubscriptionInfo() {
+                try {
+                    const res = await fetch(`${BACKEND_URL}/api/auth/status`, { credentials: 'include' });
+                    const data = await res.json();
+
+                    if (data.authenticated && data.subscription) {
+                        const sub = data.subscription;
+                        const planNames = {
+                            'free_trial': 'Free Trial',
+                            'basic': 'Basic',
+                            'pro': 'Professional',
+                            'enterprise': 'Enterprise'
+                        };
+
+                        const planName = planNames[sub.plan] || sub.plan;
+                        const planClass = sub.plan === 'free_trial' ? 'free-trial' : sub.plan;
+
+                        // Update badge
+                        const badge = document.getElementById('planBadge');
+                        badge.className = `plan-badge ${planClass}`;
+                        badge.innerHTML = `<span class="status-dot ${sub.status === 'active' ? 'active' : 'inactive'}"></span> ${planName}`;
+
+                        // Update details
+                        document.getElementById('currentPlan').textContent = planName;
+                        document.getElementById('subStatus').textContent =
+                            sub.status.charAt(0).toUpperCase() + sub.status.slice(1);
+
+                        // Member since
+                        if (data.user && data.user.created_at) {
+                            const date = new Date(data.user.created_at);
+                            document.getElementById('memberSince').textContent = date.toLocaleDateString('en-US', {
+                                year: 'numeric', month: 'short', day: 'numeric'
+                            });
+                        }
+
+                        // Show/hide buttons based on plan
+                        if (sub.plan !== 'free_trial' && sub.stripe_customer_id) {
+                            // Has a paid plan — show Manage Billing
+                            document.getElementById('manageBillingBtn').style.display = 'inline-flex';
+                            document.getElementById('upgradeBtn').textContent = '⬆️ Change Plan';
+                        }
+                    }
+                } catch (err) {
+                    console.error('Failed to load subscription info:', err);
+                }
+            }
+
+            // Manage Billing (Stripe Portal)
+            document.getElementById('manageBillingBtn').addEventListener('click', async () => {
+                const btn = document.getElementById('manageBillingBtn');
+                btn.disabled = true;
+                btn.textContent = 'Loading...';
+
+                try {
+                    const res = await fetch(`${BACKEND_URL}/api/stripe/create-portal-session`, {
+                        method: 'POST',
+                        credentials: 'include',
+                        headers: { 'Content-Type': 'application/json' }
+                    });
+                    const data = await res.json();
+
+                    if (data.success && data.url) {
+                        window.location.href = data.url;
+                    } else {
+                        alert('Unable to open billing portal. Please try again.');
+                        btn.disabled = false;
+                        btn.textContent = '💳 Manage Billing';
+                    }
+                } catch (err) {
+                    console.error('Portal error:', err);
+                    alert('Something went wrong. Please try again.');
+                    btn.disabled = false;
+                    btn.textContent = '💳 Manage Billing';
+                }
+            });
+
+            // Load subscription info on page load
+            loadSubscriptionInfo();
 
             // Check for connection status URL param
             const urlParams = new URLSearchParams(window.location.search);
