fix: CTA buttons now link to checkout-choice.html instead of register.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,7 +115,7 @@
                 <a href="/reviews.html">Reviews</a>
                 <a href="#about">About</a>
                 <a href="/login.html" class="nav-login">Sign In</a>
-                <a href="/register.html" class="nav-cta">Start Free Trial</a>
+                <a href="/checkout-choice.html" class="nav-cta">Start Free Trial</a>
             </div>
         </div>
     </nav>
@@ -135,7 +135,7 @@
                     inventory management, and revenue analytics—so you can focus on growth.
                 </p>
                 <div class="hero-cta">
-                    <a href="/register.html" class="btn btn-primary">
+                    <a href="/checkout-choice.html" class="btn btn-primary">
                         Start Free Trial
                         <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path d="M13 7l5 5m0 0l-5 5m5-5H6" stroke-width="2" stroke-linecap="round"
@@ -348,7 +348,7 @@
                 <h2>Ready to Scale Your Amazon Business?</h2>
                 <p>Join thousands of sellers growing their business with AmazonReach</p>
                 <div class="cta-buttons">
-                    <a href="/register.html" class="btn btn-primary btn-lg">
+                    <a href="/checkout-choice.html" class="btn btn-primary btn-lg">
                         Start Free 14-Day Trial
                     </a>
                 </div>
