fix: Upgrade Plan button goes to checkout-choice instead of homepage

--- a/frontend/dashboard/settings.html
+++ b/frontend/dashboard/settings.html
@@ -215,7 +215,8 @@
             </div>
 
             <div class="subscription-actions">
-                <button class="btn-manage primary" id="upgradeBtn" onclick="window.location.href='/#pricing'">
+                <button class="btn-manage primary" id="upgradeBtn"
+                    onclick="window.location.href='/checkout-choice.html'">
                     ⬆️ Upgrade Plan
                 </button>
                 <button class="btn-manage secondary" id="manageBillingBtn" style="display: none;">
