feat: blog admin panel with Quill.js editor
- Blog CRUD methods in database.js (Firebase blog_posts collection)
- Blog API endpoints in admin.js (GET/POST/PUT/DELETE, admin-only)
- Blog editor page with Quill.js rich text editor
- Post list with draft/published status
- Blog link added to all dashboard sidebar pages

--- a/frontend/dashboard/analytics.html
+++ b/frontend/dashboard/analytics.html
@@ -20,6 +20,7 @@
             <li class="nav-item"><a href="dashboard.html" class="nav-link"><span>📊</span> Overview</a></li>
             <li class="nav-item"><a href="inventory.html" class="nav-link"><span>📦</span> Inventory</a></li>
             <li class="nav-item"><a href="#" class="nav-link active"><span>📈</span> Analytics</a></li>
+            <li class="nav-item"><a href="blog-editor.html" class="nav-link"><span>📝</span> Blog</a></li>
             <li class="nav-item"><a href="settings.html" class="nav-link"><span>⚙️</span> Settings</a></li>
         </ul>
         <div class="user-profile">
