--- a/frontend/dashboard/dashboard.html
+++ b/frontend/dashboard/dashboard.html
@@ -36,6 +36,11 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="blog-editor.html" class="nav-link">
+                    <span>📝</span> Blog
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="settings.html" class="nav-link">
                     <span>⚙️</span> Settings
                 </a>
