--- a/frontend/login.html
+++ b/frontend/login.html
@@ -2,219 +2,192 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In - AmazonReach</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://amazonreach.pages.dev/login.html">
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://amazonreach.pages.dev/login.html">
-    <meta property="og:title" content="Sign In - AmazonReach">
-    <meta property="og:description"
-        content="Access your AmazonReach dashboard. Manage your global Amazon business with AI-powered analytics and fulfillment tools.">
-    <meta property="og:image" content="https://amazonreach.pages.dev/images/login-og.jpg">
-
-    <!-- Twitter Card -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://amazonreach.pages.dev/login.html">
-    <meta property="twitter:title" content="Sign In - AmazonReach">
-    <meta property="twitter:description" content="Access your AmazonReach dashboard. AI-powered Amazon analytics.">
-    <meta property="twitter:image" content="https://amazonreach.pages.dev/images/login-og.jpg">
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>AmazonReach | Professional Login</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&amp;display=swap"
+        rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+        rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+        rel="stylesheet" />
+    <script id="tailwind-config">
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#1152d4",
+                        "background-light": "#f6f6f8",
+                        "background-dark": "#101622",
+                    },
+                    fontFamily: {
+                        "display": ["Inter", "sans-serif"]
+                    },
+                    borderRadius: {
+                        "DEFAULT": "0.25rem",
+                        "lg": "0.5rem",
+                        "xl": "0.75rem",
+                        "full": "9999px"
+                    },
+                },
+            },
         }
-
+    </script>
+    <style>
         body {
             font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #1E293B 0%, #0F172A 100%);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
 
-        .login-container {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 24px;
-            padding: 48px;
-            width: 100%;
-            max-width: 450px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
-        }
-
-        .logo {
-            text-align: center;
-            margin-bottom: 32px;
-        }
-
-        .logo-icon {
-            font-size: 48px;
-            margin-bottom: 8px;
-        }
-
-        .logo-text {
-            font-size: 32px;
-            font-weight: 800;
-            color: #fff;
-        }
-
-        h1 {
-            color: #fff;
-            font-size: 28px;
-            margin-bottom: 8px;
-            text-align: center;
-        }
-
-        .subtitle {
-            color: rgba(255, 255, 255, 0.7);
-            text-align: center;
-            margin-bottom: 32px;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        label {
-            display: block;
-            color: rgba(255, 255, 255, 0.9);
-            margin-bottom: 8px;
-            font-weight: 500;
-        }
-
-        input {
-            width: 100%;
-            padding: 14px 16px;
-            background: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            border-radius: 12px;
-            color: #fff;
-            font-size: 16px;
-            transition: all 0.3s;
-        }
-
-        input:focus {
-            outline: none;
-            border-color: #6366F1;
-            background: rgba(255, 255, 255, 0.15);
-        }
-
-        .btn {
-            width: 100%;
-            padding: 14px;
-            background: linear-gradient(135deg, #6366F1 0%, #3B82F6 100%);
-            color: white;
-            border: none;
-            border-radius: 12px;
-            font-size: 16px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: transform 0.3s;
-            margin-top: 8px;
-        }
-
-        .btn:hover {
-            transform: translateY(-2px);
-        }
-
-        .divider {
-            text-align: center;
-            margin: 24px 0;
-            color: rgba(255, 255, 255, 0.5);
-            position: relative;
-        }
-
-        .divider::before,
-        .divider::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            width: 40%;
-            height: 1px;
-            background: rgba(255, 255, 255, 0.2);
-        }
-
-        .divider::before {
-            left: 0;
-        }
-
-        .divider::after {
-            right: 0;
-        }
-
-        .register-link {
-            text-align: center;
-            margin-top: 24px;
-            color: rgba(255, 255, 255, 0.7);
-        }
-
-        .register-link a {
-            color: #6366F1;
-            text-decoration: none;
-            font-weight: 600;
-        }
-
-        .register-link a:hover {
-            text-decoration: underline;
-        }
-
-        .error-message {
-            background: rgba(239, 68, 68, 0.2);
-            border: 1px solid rgba(239, 68, 68, 0.4);
-            color: #FCA5A5;
-            padding: 12px;
-            border-radius: 8px;
-            margin-bottom: 16px;
-            display: none;
+        .bg-mesh {
+            background-color: #f6f6f8;
+            background-image:
+                radial-gradient(at 0% 0%, rgba(17, 82, 212, 0.05) 0px, transparent 50%),
+                radial-gradient(at 100% 100%, rgba(17, 82, 212, 0.05) 0px, transparent 50%);
         }
     </style>
 </head>
 
-<body>
-    <div class="login-container">
-        <div class="logo">
-            <div class="logo-icon">🚀</div>
-            <div class="logo-text">AmazonReach</div>
-        </div>
-
-        <h1>Welcome Back</h1>
-        <p class="subtitle">Sign in to your account</p>
-
-        <div id="error-message" class="error-message"></div>
-
-        <form id="loginForm" autocomplete="off">
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" required placeholder="name@company.com" autocomplete="off">
+<body class="bg-mesh min-h-screen flex flex-col font-display text-slate-900 dark:text-slate-100">
+    <!-- Top Navigation / Header -->
+    <header
+        class="w-full px-6 py-4 flex justify-between items-center bg-white/80 backdrop-blur-md border-b border-slate-200 dark:bg-background-dark/80 dark:border-slate-800 sticky top-0 z-50">
+        <div class="flex items-center gap-2">
+            <div class="bg-primary p-1.5 rounded-lg flex items-center justify-center">
+                <span class="material-symbols-outlined text-white text-2xl">rocket_launch</span>
             </div>
-
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" required placeholder="Enter your password"
-                    autocomplete="new-password">
-            </div>
-
-            <button type="submit" class="btn">Sign In</button>
-        </form>
-
-        <div class="register-link">
-            Don't have an account? <a href="/register.html">Start free trial</a>
+            <h1 class="text-xl font-bold tracking-tight text-slate-900 dark:text-white">AmazonReach</h1>
         </div>
-    </div>
+        <div class="flex items-center gap-4">
+            <span class="hidden md:flex items-center gap-1 text-xs font-medium text-slate-500 uppercase tracking-wider">
+                <span class="material-symbols-outlined text-sm">verified_user</span>
+                Secure Environment
+            </span>
+            <button class="text-sm font-semibold text-primary hover:text-primary/80 transition-colors">
+                Help Center
+            </button>
+        </div>
+    </header>
+    <!-- Main Content Area -->
+    <main class="flex-grow flex items-center justify-center px-4 py-12">
+        <div class="w-full max-w-[440px] animate-in fade-in zoom-in duration-500">
+            <!-- Login Card -->
+            <div
+                class="bg-white dark:bg-slate-900 rounded-xl shadow-xl shadow-primary/5 border border-slate-200 dark:border-slate-800 overflow-hidden">
+                <div class="p-8 pb-6 border-b border-slate-100 dark:border-slate-800/50">
+                    <h2 class="text-2xl font-bold text-slate-900 dark:text-white">Welcome back</h2>
+                    <p class="mt-2 text-slate-500 dark:text-slate-400 text-sm">Please enter your professional
+                        credentials
+                        to access the AmazonReach dashboard.</p>
+                </div>
+                <!-- Add error message div -->
+                <div id="error-message"
+                    class="hidden mx-8 mt-6 p-3 bg-red-100 border border-red-400 text-red-700 rounded-lg text-sm"></div>
 
+                <form id="loginForm" class="p-8 space-y-6" autocomplete="off">
+                    <!-- Email Input -->
+                    <div class="space-y-2">
+                        <label class="text-sm font-semibold text-slate-700 dark:text-slate-300" for="email">Email
+                            Address</label>
+                        <div class="relative group">
+                            <div
+                                class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-slate-400 group-focus-within:text-primary transition-colors">
+                                <span class="material-symbols-outlined text-xl">mail</span>
+                            </div>
+                            <input
+                                class="block w-full pl-10 pr-4 py-3 bg-slate-50 dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-lg text-slate-900 dark:text-white placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-primary/20 focus:border-primary transition-all"
+                                id="email" name="email" placeholder="name@company.com" type="email" required
+                                autocomplete="off" />
+                        </div>
+                    </div>
+                    <!-- Password Input -->
+                    <div class="space-y-2">
+                        <div class="flex justify-between items-center">
+                            <label class="text-sm font-semibold text-slate-700 dark:text-slate-300"
+                                for="password">Password</label>
+                            <a class="text-xs font-bold text-primary hover:underline" href="#">Forgot password?</a>
+                        </div>
+                        <div class="relative group">
+                            <div
+                                class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-slate-400 group-focus-within:text-primary transition-colors">
+                                <span class="material-symbols-outlined text-xl">lock</span>
+                            </div>
+                            <input
+                                class="block w-full pl-10 pr-12 py-3 bg-slate-50 dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-lg text-slate-900 dark:text-white placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-primary/20 focus:border-primary transition-all"
+                                id="password" name="password" placeholder="••••••••" type="password" required
+                                autocomplete="new-password" />
+                            <button
+                                class="absolute inset-y-0 right-0 pr-3 flex items-center text-slate-400 hover:text-slate-600 dark:hover:text-slate-200 transition-colors"
+                                type="button">
+                                <span class="material-symbols-outlined text-xl">visibility</span>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- Remember Me -->
+                    <div class="flex items-center">
+                        <input
+                            class="h-4 w-4 rounded border-slate-300 text-primary focus:ring-primary dark:border-slate-700 dark:bg-slate-800"
+                            id="remember" name="remember" type="checkbox" />
+                        <label class="ml-2 block text-sm text-slate-600 dark:text-slate-400 font-medium cursor-pointer"
+                            for="remember">
+                            Keep me logged in for 30 days
+                        </label>
+                    </div>
+                    <!-- Sign In Button -->
+                    <button
+                        class="w-full flex justify-center items-center gap-2 py-3 px-4 rounded-lg bg-primary text-white font-bold text-sm hover:bg-primary/90 focus:outline-none focus:ring-4 focus:ring-primary/20 active:scale-[0.98] transition-all shadow-lg shadow-primary/25"
+                        type="submit">
+                        <span class="material-symbols-outlined text-lg">login</span>
+                        Sign In to Dashboard
+                    </button>
+                </form>
+                <!-- Support Footer -->
+                <div
+                    class="px-8 py-6 bg-slate-50 dark:bg-slate-800/50 border-t border-slate-100 dark:border-slate-800 text-center">
+                    <p class="text-xs text-slate-500 dark:text-slate-400 font-medium">
+                        Don't have an account?
+                        <a class="text-primary font-bold hover:underline" href="/register.html">Start free trial</a>
+                    </p>
+                </div>
+            </div>
+            <!-- Trust Badges -->
+            <div class="mt-8 flex flex-col items-center gap-4">
+                <div
+                    class="flex items-center gap-6 opacity-40 grayscale hover:grayscale-0 hover:opacity-100 transition-all duration-300">
+                    <div class="flex items-center gap-1.5 text-xs font-bold uppercase tracking-widest">
+                        <span class="material-symbols-outlined text-lg">shield</span>
+                        256-Bit SSL
+                    </div>
+                    <div class="flex items-center gap-1.5 text-xs font-bold uppercase tracking-widest">
+                        <span class="material-symbols-outlined text-lg">ads_click</span>
+                        Amazon Partner
+                    </div>
+                </div>
+                <p class="text-[10px] text-slate-400 dark:text-slate-500 text-center max-w-[300px]">
+                    By logging in, you agree to AmazonReach's Terms of Service and Privacy Policy. Your data is
+                    encrypted
+                    and protected.
+                </p>
+            </div>
+        </div>
+    </main>
+    <!-- Footer -->
+    <footer
+        class="w-full py-6 px-6 border-t border-slate-200 dark:border-slate-800 flex flex-col md:flex-row justify-between items-center gap-4 bg-white dark:bg-background-dark">
+        <p class="text-xs text-slate-500 dark:text-slate-400">
+            © 2026 AmazonReach Marketing Agency. All rights reserved.
+        </p>
+        <div class="flex items-center gap-6 text-xs font-semibold text-slate-500 dark:text-slate-400">
+            <a class="hover:text-primary transition-colors" href="/privacy.html">Privacy Policy</a>
+            <a class="hover:text-primary transition-colors" href="/terms.html">Terms of Use</a>
+            <a class="hover:text-primary transition-colors" href="#">Security</a>
+        </div>
+    </footer>
+
+    <!-- JS Logic from the old login screen -->
     <script>
         const BACKEND_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
             ? 'http://localhost:3000'
